--- a/CustomNPC/CustomNPC/CustomNPC.csproj
+++ b/CustomNPC/CustomNPC/CustomNPC.csproj
@@ -32,18 +32,20 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Data.Sqlite">
-      <HintPath>..\Libraries\Mono.Data.Sqlite.dll</HintPath>
+      <HintPath>..\..\..\..\..\#### DEPS ####\1.3.0.7.9\Mono.Data.Sqlite.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.3.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Libraries\MySql.Data.dll</HintPath>
+    <Reference Include="MySql.Data">
+      <HintPath>..\..\..\..\..\#### DEPS ####\1.3.0.7.9\MySql.Data.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Libraries\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\..\..\#### DEPS ####\1.3.0.7.9\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="OTAPI">
-      <HintPath>..\..\..\..\CustomNPC Addons\Refences\OTAPI.dll</HintPath>
+      <HintPath>..\..\..\..\..\#### DEPS ####\1.3.0.7.9\OTAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -52,14 +54,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TerrariaServer">
-      <HintPath>..\..\..\..\CustomNPC Addons\Refences\TerrariaServer.exe</HintPath>
-    </Reference>
-    <Reference Include="TShockAPI">
-      <HintPath>..\..\..\..\CustomNPC Addons\Refences\TShockAPI.dll</HintPath>
-    </Reference>
     <Reference Include="Wolfje.Plugins.SEconomy">
       <HintPath>..\Libraries\Wolfje.Plugins.SEconomy.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -97,8 +94,22 @@
     <Compile Include="ShotTile.cs" />
     <Compile Include="TaeirUtil.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\#### API ####\1.3.0.7.9\TerrariaServerAPI\TerrariaServerAPI\TerrariaServerAPI.csproj">
+      <Project>{6877506e-adc6-4142-98a6-79e4fa02855a}</Project>
+      <Name>TerrariaServerAPI</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\#### TSHOCK CODE ####\1.3.0.7.9\TShockAPI\TShockAPI.csproj">
+      <Project>{49606449-072b-4cf5-8088-aa49da586694}</Project>
+      <Name>TShockAPI</Name>
+      <Private>False</Private>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy "$(TargetDir)$(TargetFileName)" "C:\Terraria-Server-Master\#### SERVER ####\1.3.0.7.9\ServerPlugins"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
