--- a/CustomNPC/TestNPC/TestNPC.csproj
+++ b/CustomNPC/TestNPC/TestNPC.csproj
@@ -32,7 +32,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OTAPI">
-      <HintPath>..\..\..\..\CustomNPC Addons\Refences\OTAPI.dll</HintPath>
+      <HintPath>..\..\..\..\..\#### DEPS ####\1.3.0.7.9\OTAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -41,14 +42,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TerrariaServer, Version=1.15.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Libraries\TerrariaServer.exe</HintPath>
-    </Reference>
-    <Reference Include="TShockAPI, Version=4.2.2.224, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Libraries\TShockAPI.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestNPCDefinition.cs" />
@@ -56,12 +49,25 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\#### API ####\1.3.0.7.9\TerrariaServerAPI\TerrariaServerAPI\TerrariaServerAPI.csproj">
+      <Project>{6877506e-adc6-4142-98a6-79e4fa02855a}</Project>
+      <Name>TerrariaServerAPI</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\#### TSHOCK CODE ####\1.3.0.7.9\TShockAPI\TShockAPI.csproj">
+      <Project>{49606449-072b-4cf5-8088-aa49da586694}</Project>
+      <Name>TShockAPI</Name>
+      <Private>False</Private>
+    </ProjectReference>
     <ProjectReference Include="..\CustomNPC\CustomNPC.csproj">
       <Project>{fda69d84-fd53-4dda-bb00-0f9ccac7a3d4}</Project>
       <Name>CustomNPC</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy "$(TargetDir)$(TargetFileName)" "C:\Terraria-Server-Master\#### SERVER ####\1.3.0.7.9\ServerPlugins\CustomNPCs"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
